--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1>Hello World?</h1>
-    <script src="bundle.js"></script>
+    <h1>Users</h1>
+    <table>
+      <thead>
+        <th>&nbsp;</th>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </thead>
+      <tbody id="users">
+
+      </tbody>
+    </table>
+    <!-- <script src="bundle.js"></script> -->
   </body>
 </html>
 <!--  -->
